2004-04-24  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-utils.c (decode_msgid): Try to always return a
	string buffer containing whatever we can get from the msg-id, even
	if it isn't a valid msg-id token.

2004-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-content-type.c
	(g_mime_content_type_new_from_string): Chew up lwsp between the
	end of the cubtype and the ';' token, if there is any.

2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Save both the
	TRUST_UNDEFINED trust state as well as the whether or not we get a
	NO_PUBKEY status message.

2004-04-11  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-filter.c (stream_read): Check that we haven't
	already flushed the stream if the source stream is at EOS - fixes
	an infinite loop case if the user doesn't use a loop to check
	eos() each loop.

2004-04-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-cat.c (stream_write): This should be writing
	data, not reading it from the underlying streams. Oops.

2004-03-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-charset.c (charset_best_mask): Don't use the charset
	if it is lang specific and the lang doesn't match the
	locale. Fixes bug #138218.

	* gmime/gmime-utils.c (mktime_utc): New function to mktime() into
	UTC.
	(parse_rfc822_date): Use mktime_utc() instead of doing it
	ourselves.
	(parse_broken_date): Same.

2004-03-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-buffer.c (stream_write): Fixed a bug when
	writing across block boundaries.

2004-03-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-cipher-context.c (g_mime_cipher_verify): Allow the
	sigstream to be NULL (it is optional afterall).

	Thanks to Peter Bloomfield for reminding me about
	g_ascii_strdown() and g_ascii_strup() and for providing the
	original patch.

	* gmime/gmime-charset.c (locale_parse_lang): Don't use