@@ -1,5 +1,12 @@
 2004-04-24  Jeffrey Stedfast  <fejj@ximian.com>
 
+	* gmime/gmime-part.c (g_mime_part_get_content): Disable debug
+	warning.
+
+	* gmime/gmime-iconv.c: Same.
+
+	* gmime/gmime-iconv-utils.c: Disable warnings.
+
 	* gmime/gmime-utils.c (decode_msgid): Try to always return a
 	string buffer containing whatever we can get from the msg-id, even
 	if it isn't a valid msg-id token.
